@@ -3,5 +3,5 @@ glibc-branch := fedora
 glibc-base := HEAD
 DIST_BRANCH := devel
 COLLECTION := dist-fc4
-fedora-sync-date := 2006-08-31 06:40 UTC
-fedora-sync-tag := fedora-glibc-20060831T0640
+fedora-sync-date := 2006-08-31 18:12 UTC
+fedora-sync-tag := fedora-glibc-20060831T1812
