@@ -1,4 +1,4 @@
-%define glibcrelease 27
+%define glibcrelease 28
 %define auxarches i586 i686 athlon sparcv9 alphaev6
 %define xenarches i686 athlon
 %ifarch %{xenarches}
@@ -1448,6 +1448,9 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Thu Aug 31 2006 Jakub Jelinek <jakub@redhat.com> 2.4.90-28
+- another malloc doubly linked list corruption problem fix (#204653)
+
 * Thu Aug 31 2006 Jakub Jelinek <jakub@redhat.com> 2.4.90-27
 - allow $LIB and $PLATFORM in dlopen parameters even in suid/sgid (#204399)
 - fix splice prototype (#204530)
